<resources>
    <string name="app_name">Prova2Bim</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbMatriz">Matriz Leitera</string>
    <string name="lbQnt">Quantidade em L</string>
    <string name="lbQnts">Quantidade em L:</string>
    <string name="lbId">Identificador</string>
    <string name="lbDtH">Data e Hora</string>
    <string name="lbSave">Salvar</string>
    <string name="lbCancel">Cancelar</string>
    <string name="lbDelete">Deletar</string>
    <string name="lbEdit">Editar</string>
    <string name="lbDesc">Descrição</string>
    <string name="lbAtualizar">Atualizar</string>
    <string name="lbNew">Novo</string>
    <string name="lbRelatorio">Relatório de Ordenha</string>
    <string name="title_activity_consulta_ordenha">ConsultaOrdenhaActivity</string>
</resources>
