<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:textSize="@dimen/size_default"
            android:layout_height="wrap_content"
            android:id="@+id/tvIdMatriz"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/lbId"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:textSize="@dimen/size_default"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescMatriz"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/lbDesc"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lbQnts"
            android:textSize="15dp"
            android:id="@+id/tvQntMatriz"
            android:layout_weight="2.1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15dp"
            android:id="@+id/tvQntNumeroMatriz"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/lbDtH"
        android:id="@+id/tvDtHoraMatriz"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"/>




</LinearLayout>